--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,7 @@ body {
   font-family: 'Vazir', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   direction: rtl;
+  font-size: 16px;
 }
 
 * {
