--- a/src/components/layout/navbar/styles.module.scss
+++ b/src/components/layout/navbar/styles.module.scss
@@ -1,27 +1,45 @@
 .navbar__container {
+  background-color: white;
+  z-index: 100;
+  font-size: 0.8em;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  font-size: 0.875rem;
-  color: rgba(0, 0, 0, 0.56);
-  font-weight: 500;
   height: 65px;
   max-height: 65px;
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 12%);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.12);
   padding: 0 32px;
-  .city__name {
-    color: rgba(0, 0, 0, 0.56);
-    margin-right: 5px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  hr {
+    margin: 0 15px;
+    display: inline-block;
+    height: 1.5rem;
+    width: 1px;
+    box-sizing: border-box;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.12);
   }
-  ul {
-    margin: unset;
-  }
-  li {
-    align-items: center;
-    display: flex;
-    list-style: none;
-    padding: 0 10px;
-    margin: 0 6px;
-    cursor: pointer;
+
+  :global {
+    .nav-item a {
+      display: flex;
+      align-items: center;
+      color: rgba(0, 0, 0, 0.87);
+      opacity: 0.9;
+
+      * {
+        margin-left: 0.5em;
+      }
+
+      &.active,
+      &:hover {
+        * {
+          opacity: 0.9;
+          font-weight: bold;
+        }
+      }
+    }
   }
 }
