--- a/src/components/containers/layout/Navbar/styles.module.scss
+++ b/src/components/containers/layout/Navbar/styles.module.scss
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   height: 65px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.12);
+  // box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 4px 6px 0 hsl(0deg 0% 44% / 20%);
   padding: 0 32px;
   position: fixed;
   top: 0;
@@ -16,6 +17,13 @@
   }
   .right__content {
     width: 43%;
+    .dropDown__menu {
+      background-color: white;
+    }
+    .dropDown__item:hover {
+      background-color: rgb(110, 131, 228);
+      color: white;
+    }
   }
   .left__content {
     width: 40%;
@@ -25,7 +33,8 @@
     .search_icon_box {
       display: flex;
       align-items: center;
-      color: #999 !important;
+      margin-bottom: 4px;
+      color: #616161 !important;
       font-size: 14px;
       font-weight: 600;
       padding: 0.5rem 0.7rem !important;
@@ -56,10 +65,38 @@
     }
   }
   .navbar__items {
-    color: #999 !important;
+    color: #616161 !important;
     font-size: 14px;
     font-weight: 600;
+    position: relative;
   }
+  .navbar_Right_items {
+    color: #616161 !important;
+    font-size: 14px;
+    font-weight: 600;
+    position: relative;
+  }
+  // ######  underline animation  #####
+  // .navbar__items:hover,
+  // .navbar_Right_items:hover {
+  //   opacity: 1;
+  // }
+  // .navbar__items::before,
+  // .navbar_Right_items::before {
+  //   transition: 300ms;
+  //   height: 3px;
+  //   content: '';
+  //   position: absolute;
+  //   background-color: #ff1c1c;
+  //   width: 0%;
+  //   bottom: -10px;
+  //   right: 0;
+  // }
+
+  // .navbar__items:hover::before,
+  // .navbar_Right_items:hover::before {
+  //   width: 100%;
+  // }
 
   :global {
     .nav-link {
